[project]
authors = [{name = "Milena", email = "123930503+MilFey21@users.noreply.github.com"}]
description = "Add a short description here"
name = "time_series"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["scikit-learn>=1.6.1,<2", "arch>=7.2.0,<8"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
time_series = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pandas = ">=2.2.3,<3"
numpy = ">=2.2.5,<3"
seaborn = ">=0.13.2,<0.14"
matplotlib = ">=3.10.3,<4"
scipy = ">=1.15.2,<2"
statsmodels = ">=0.14.4,<0.15"
jupyter = ">=1.1.1,<2"
prophet = ">=1.1.6,<2"
xgboost = ">=3.0.1,<4"
